realigned modal-content due to safari mobile bug

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -398,11 +398,13 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content {
-    padding: 100px 0;
+    /* padding: 100px 0; */
     min-height: 100%;
     border: 0;
     border-radius: 0;
     text-align: center;
+    margin: 0 auto;
+    pointer-events: all;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
